# operations-service

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2022-08-26-122514_init/: down.sql  up.sql
src/: lib.rs  schema.rs
src/common/: mod.rs
src/consumer/: batcher.rs  config.rs  metrics.rs  mod.rs  model.rs  storage.rs  updates.rs
src/service/: config.rs  db.rs  mod.rs  repo.rs  server.rs
