[package]
name = "operations-service"
version = "1.1.1"
authors = ["Alex Kordys <akordys@web3tech.ru>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
bs58 = "0.5"
builder-pattern = "0.4"
chrono = { version = "0.4", default-features = false }
deadpool = { version = "0.10", default-features = false, features = ["managed", "rt_tokio_1"] }
deadpool-diesel = { version = "0.5", default-features = false, features = ["postgres", "rt_tokio_1"] }
diesel = { version = "2.1", default-features = false, features = ["postgres", "serde_json", "without-deprecated"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.1"
envy = "0.4"
itertools = "0.12"
lazy_static = "1.4"
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.5.2" }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.10" }
wavesexchange_liveness = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_liveness/0.3.1"}

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"

[[bin]]
name = "service"
path = "src/bin/service.rs"
